r2e-compile-tests/cases/decorators/fail/bean_intercept_outside_literal.stderr
error[E0063]: missing field `__r2e_decos` in initializer of `CleanupService`
  --> cases/decorators/fail/bean_intercept_outside_literal.rs:29:5
   |
29 |     CleanupService { tag: "outside" }
   |     ^^^^^^^^^^^^^^ missing `__r2e_decos`
